# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: docker.yml  general.yml
.sqlx/: query-796049fd28954857d689421b217d14af8c3c4333a1e565b994d14e19a65271c9.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20231213161210_make_status_not_null_in_subscriptions.sql  20231213161531_create_subscription_tokens_table.sql  20240105174822_seed_user.sql  20240106143856_create_idempotency_table.sql  20240106152707_relax_null_checks_on_idempotency.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
