[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] # lib
path = "src/lib.rs"

# can be removed if only lib crate. Integration testing is done in test directory not in main
[[bin]] # bin to run HelloWorld
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] } # facade to generate traces
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] } # to actually print traces
tracing-bunyan-formatter = "0.3" # uses layer trait from tracing subscriber to build a processing pipeline for span data (see main)
tracing-log = "0.1" # redirect logs to tracing
tracing-actix-web = "0.7" # replacement for acti-web-logger
unicode-segmentation = "1"
secrecy = { version = "0.8", features = ["serde"] }
claims = "0.7" # for better assertions in tests
validator = "0.16"
rand = { version = "0.8.5", features = ["std_rng"] } # need the `std_rng` to get access to the PRNG (PseudoRandomNumberGenerator)


# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.reqwest]
version = "0.11"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]


[dev-dependencies]

fake = "2.8.0" # create fake test data e.g email adresses etc
quickcheck = "1.0.3" # use types which implemts Arbitrary trait to generate data and run test functions multiple times
quickcheck_macros = "1.0.0"
rand = "0.8.5" # required to seed random to quickcheck
wiremock = "0.5"
serde_json = "1"
linkify = "0.10.0" # to scan texts for links